--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "periodic-table-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.ts",
   "scripts": {
     "start": "nodemon src/app.ts"
   },
