--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "app.ts",
   "scripts": {
-    "start": "nodemon src/app.ts"
+    "start": "node dist/app.js",
+    "dev": "nodemon src/app.ts",
+    "postinstall": "tsc"
   },
+  "engines": { "node": "12.16.2" },
   "keywords": [],
   "author": "",
   "license": "ISC",
