--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "periodic-table-api",
   "version": "1.0.0",
   "description": "",
-  "main": "app.ts",
+  "main": "index.js",
   "scripts": {
-    "start": "node dist/app.js",
-    "dev": "nodemon src/app.ts",
-    "postinstall": "tsc"
+    "start": "node dist/index.js",
+    "dev": "nodemon src/index.ts",
+    "postinstall": "tsc && mv -i -v public dist/ && rm -v -rf src"
   },
-  "engines": { "node": "12.16.2" },
+  "engines": {
+    "node": "12.16.2"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
