--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,49 @@
-node_modules
-dist
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+
+# private config files
+/client/src/app/config.ts
+/client/src/environments
+
+# compiled output
+/client/dist
+/server/dist
+
+# dependencies
+/client/node_modules
+/server/node_modules
+
+
+# profiling files
+chrome-profiler-events*.json
+speed-measure-plugin*.json
+
+# IDEs and editors
+/.idea
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+.history/*
+
+# misc
+/.sass-cache
+/connect.lock
+/coverage
+/libpeerconnection.log
+npm-debug.log
+yarn-error.log
+testem.log
+/typings
+
+# System Files
+.DS_Store
+Thumbs.db
