--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angular-ecomm",
+  "name": "pt-api-client",
   "version": "1.0.0",
   "scripts": {
     "ng": "ng",
@@ -7,22 +7,18 @@
     "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "deploy": "firebase deploy --only hosting:angular-ecomm-8e330"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@agm/core": "^1.1.0",
     "@angular-material-extensions/google-maps-autocomplete": "^4.1.0",
     "@angular/animations": "~9.1.11",
     "@angular/cdk": "^9.2.4",
     "@angular/common": "^9.1.11",
     "@angular/compiler": "~9.1.11",
     "@angular/core": "^9.1.11",
-    "@angular/fire": "^6.0.3",
     "@angular/flex-layout": "^9.0.0-beta.31",
     "@angular/forms": "^9.1.11",
-    "@angular/google-maps": "^9.2.4",
     "@angular/material": "^9.2.4",
     "@angular/platform-browser": "^9.1.11",
     "@angular/platform-browser-dynamic": "~9.1.11",
@@ -33,10 +29,6 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.1",
     "@fortawesome/free-solid-svg-icons": "^5.13.1",
     "@grpc/grpc-js": "^1.1.1",
-    "@types/googlemaps": "^3.39.8",
-    "firebase": "^7.24.0",
-    "google-auth-library": "^6.0.0",
-    "googlemaps": "^1.12.0",
     "ngp-sort-pipe": "0.0.4",
     "ngx-sharebuttons": "^8.0.0",
     "ngx-spinner": "^9.0.2",
