connected front and backend & they work together after postinstall

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # private config files
-/client/src/app/config.ts
-/client/src/environments
+client/src/app/config.ts
+client/src/environments
+
+# Heroku Only
+# /client
 
 # compiled output
-/src/dist
 /client/dist
+/dist
 
 # dependencies
 /client/node_modules
