--- a/package.json
+++ b/package.json
@@ -6,10 +6,7 @@
   "scripts": {
     "start": "node dist/index.js",
     "dev": "nodemon src/index.ts",
-    "postinstall": "tsc && mv -i -v src/public dist/ && cp -a src/dist/. dist/public && rm -v -rf src"
-  },
-  "engines": {
-    "node": "12.16.2"
+    "tsc": "tsc && mv -i -v src/public dist/ && cp -a src/dist/. dist/public && rm -v -rf src"
   },
   "keywords": [],
   "author": "",
