--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,6 +4,7 @@ services:
   server:
     build: .
     container_name: server
+    image: t36campbell/periodic-table-api-backend
     expose:
       - ${PORT}
     environment: 
@@ -15,6 +16,7 @@ services:
   client:
     build: ./client
     container_name: client
+    image: t36campbell/periodic-table-api-frontend
     volumes:
       - ./client:/client
       - /client/node_modules
