--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "25427c5e-ea5c-4b21-b2c0-d8cc9986476e"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
