--- a/backend/package.json
+++ b/backend/package.json
@@ -25,9 +25,14 @@
   },
   "dependencies": {
     "@nestjs/common": "^8.4.4",
+    "@nestjs/config": "^2.0.0",
     "@nestjs/core": "^8.4.4",
+    "@nestjs/jwt": "^8.0.0",
+    "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.4.4",
     "@prisma/client": "^3.12.0",
+    "passport": "^0.5.2",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.5.5"
@@ -39,6 +44,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "27.4.1",
     "@types/node": "^17.0.25",
+    "@types/passport-jwt": "^3.0.6",
     "@types/supertest": "^2.0.12",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
@@ -47,14 +53,14 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "^27.5.1",
     "prettier": "^2.6.2",
+    "prisma": "^3.12.0",
     "source-map-support": "^0.5.21",
     "supertest": "^6.2.2",
     "ts-jest": "^27.1.4",
     "ts-loader": "^9.2.8",
     "ts-node": "^10.7.0",
     "tsconfig-paths": "^3.14.1",
-    "typescript": "^4.6.3",
-    "prisma": "^3.12.0"
+    "typescript": "^4.6.3"
   },
   "jest": {
     "moduleFileExtensions": [
